--- a/index.html
+++ b/index.html
@@ -1,51 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="outer">
+      <div class="background-left"></div>
+      <div class="background-right"></div>
+      <div class="main-text">
+        <div class="main-text-content">
+          <h1>
+            Simple booking
+          </h1>
+          <p>
+            Stay in touch with our dog walkers through the chat interface. This
+            makes it easy to discuss arrangements and make bookings. Once the
+            walk has been completed you can rate your walker and book again all
+            through the chat.
+          </p>
+        </div>
+      </div>
+      <div class="phone">
+        <div class="inner">
+          <div class="phone-header">
+            <div class="back-arrow">
+              <
+            </div>
+            <div class="phone-header-photo">
+              <img
+                class="profile-pic"
+                src="images/avatar.jpg"
+                alt="profile-pic"
+              />
+            </div>
+            <div class="phone-header-text">
+              <h3>
+                Samuel Green
+              </h3>
+              <p>
+                Available to Walk
+              </p>
+            </div>
+            <div class="dots">
+              <span class="dot"></span>
+              <span class="dot"></span>
+              <span class="dot"></span>
+            </div>
+          </div>
+          <div class="chat">
+            <div class="message-in">
+              That sounds great. I’d be happy with that.
+            </div>
+            <div class="message-in">
+              Could you send over some pictures of your dog, please?
+            </div>
+            <div class="photos message-right">
+              <img src="images/dog-image-1.jpg" alt="dog-1" />
+              <img src="images/dog-image-2.jpg" alt="dog-2" />
+              <img src="images/dog-image-3.jpg" alt="dog-3" />
+            </div>
+            <div class="message-out message-right">
+              Here are a few pictures. She’s a happy girl!
+            </div>
+            <div class="message-out message-right">
+              Can you make it?
+            </div>
+            <div class="message-in">
+              She looks so happy! The time we discussed works. How long shall I
+              take her out for?
+            </div>
 
-  Samuel Green
-  Available to Walk
+            <div class="option">
+              <div class="circle"></div>
+              <p>
+                30 minute walk
+              </p>
+              <span>$29</span>
+            </div>
+            <div class="option">
+              <div class="circle"></div>
+              <p>
+                1 hour walk
+              </p>
+              <span>
+                $49
+              </span>
+            </div>
+            <div class="type">
+              <p>
+                Type a message…
+              </p>
+              <div class="send"><span>></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  That sounds great. I’d be happy with that.
-
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <!-- <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div> -->
+    </div>
+  </body>
 </html>
